--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
+<title>School Project Tools</title>	
+	
 <style>
-
 .startupPage { top:0; left:0;
 width:96%; height:96%; position: absolute;
 border: solid 1px #37474F;*/
 }
 #videoArea2 { left:500px; }
-
 </style>
 
 </head>
